[gd_scene load_steps=31 format=3 uid="uid://dt32g70qwkgrm"]

[ext_resource type="Script" uid="uid://wylfd3p6y47x" path="res://console/Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" path="res://Assets/without_outline/IDLE.png" id="1_hghv2"]
[ext_resource type="Texture2D" path="res://Assets/without_outline/ATTACK 2.png" id="2_287tu"]
[ext_resource type="Texture2D" path="res://Assets/without_outline/RUN.png" id="2_afpow"]
[ext_resource type="PackedScene" uid="uid://b8lluidxqsudp" path="res://console/Scenes/health_bar.tscn" id="5_0830c"]
[ext_resource type="AudioStream" path="res://console/Assets/29db31eihbc-armor-sfx-2.mp3" id="6_ghaa6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xo"]
atlas = ExtResource("2_287tu")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl1n"]
atlas = ExtResource("2_287tu")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("2_287tu")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdhn"]
atlas = ExtResource("2_287tu")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jyny"]
atlas = ExtResource("2_287tu")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("2_afpow")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("2_afpow")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("2_afpow")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("2_afpow")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4x7e"]
atlas = ExtResource("2_afpow")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt4ob"]
atlas = ExtResource("2_afpow")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeoe"]
atlas = ExtResource("2_afpow")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("1_hghv2")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_hghv2")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_hghv2")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_hghv2")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_hghv2")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_hghv2")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("1_hghv2")
region = Rect2(576, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uf12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jyny")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt4ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeoe")
}],
"loop": true,
"name": &"chase",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_po0sg"]
size = Vector2(57, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_haro7"]
size = Vector2(8, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afpow"]
size = Vector2(28, 33)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_8uf12")
autoplay = "default"
offset = Vector2(0, -8)

[node name="detection area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection area"]
light_mask = 2
visibility_layer = 2
position = Vector2(3, -18)
shape = SubResource("RectangleShape2D_po0sg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -18)
shape = SubResource("RectangleShape2D_haro7")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_afpow")

[node name="Timer" type="Timer" parent="."]

[node name="takedamagecooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="health bar" parent="." instance=ExtResource("5_0830c")]
offset_left = -18.0
offset_top = -39.0
offset_right = 230.13
offset_bottom = -12.0
scale = Vector2(0.16, 0.16)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ghaa6")

[connection signal="body_entered" from="detection area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="takedamagecooldown" to="." method="_on_takedamagecooldown_timeout"]
